--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -28,11 +28,14 @@
                 <textarea type="text" name="texto" class="textarea" id="textarea"></textarea>
                 <div class="botao" id="botao">Submit</div>
             </form>
-            <img id="imagem" src="{% static 'img/placeholder.jpg' %}">
+
+            <p id="message"></p>
+
+            <img id="imagem" src="{% static 'img/placeholder.jpg' %}" class="">
         </div>
     </div>
 
-    <script src="{% static 'js/bundle.js' %}" class="imagem"></script>
+    <script src="{% static 'js/bundle.js' %}"></script>
 </body>
 
 </html>
